# genepiseeker

./: .gitignore  CMakeLists.txt  README.md  install.py
data/BOOST/ME/1200/1/: simdata1.csv  simdata10.csv  simdata100.csv  simdata11.csv  simdata12.csv  simdata13.csv  simdata14.csv  simdata15.csv  simdata16.csv  simdata17.csv  simdata18.csv  simdata19.csv  simdata2.csv  simdata20.csv  simdata21.csv  simdata22.csv  simdata23.csv  simdata24.csv  simdata25.csv  simdata26.csv  simdata27.csv  simdata28.csv  simdata29.csv  simdata3.csv  simdata30.csv  (+75 more)
data/EpiGEN/: generate_data.py  generate_models.py
data/MACOED/: README.txt
data/MACOED/ME/: 70.1600.3.antesnp100.csv  70.1600.32.antesnp100.csv  70.1600.34.antesnp100.csv  70.1600.35.antesnp100.csv  70.1600.36.antesnp100.csv  70.1600.37.antesnp100.csv  70.1600.38.antesnp100.csv  70.1600.39.antesnp100.csv  70.1600.4.antesnp100.csv  70.1600.40.antesnp100.csv  70.1600.41.antesnp100.csv  70.1600.42.antesnp100.csv  70.1600.43.antesnp100.csv  70.1600.45.antesnp100.csv  70.1600.46.antesnp100.csv  70.1600.47.antesnp100.csv  70.1600.48.antesnp100.csv  70.1600.49.antesnp100.csv  70.1600.5.antesnp100.csv  70.1600.50.antesnp100.csv  70.1600.51.antesnp100.csv  70.1600.52.antesnp100.csv  70.1600.53.antesnp100.csv  70.1600.54.antesnp100.csv  70.1600.55.antesnp100.csv  70.1600.56.antesnp100.csv  70.1600.57.antesnp100.csv  70.1600.58.antesnp100.csv  70.1600.59.antesnp100.csv  70.1600.6.antesnp100.csv  70.1600.60.antesnp100.csv  70.1600.61.antesnp100.csv  70.1600.62.antesnp100.csv  70.1600.63.antesnp100.csv  70.1600.64.antesnp100.csv  70.1600.65.antesnp100.csv  70.1600.66.antesnp100.csv  70.1600.67.antesnp100.csv  70.1600.68.antesnp100.csv  70.1600.69.antesnp100.csv  (+1132 more)
data/MACOED/NME/: 00.1600.1.antesnp100.csv  00.1600.10.antesnp100.csv  00.1600.11.antesnp100.csv  00.1600.12.antesnp100.csv  00.1600.13.antesnp100.csv  00.1600.14.antesnp100.csv  00.1600.15.antesnp100.csv  00.1600.16.antesnp100.csv  00.1600.17.antesnp100.csv  00.1600.18.antesnp100.csv  00.1600.19.antesnp100.csv  00.1600.2.antesnp100.csv  00.1600.20.antesnp100.csv  00.1600.21.antesnp100.csv  00.1600.22.antesnp100.csv  00.1600.23.antesnp100.csv  00.1600.24.antesnp100.csv  00.1600.25.antesnp100.csv  00.1600.26.antesnp100.csv  00.1600.27.antesnp100.csv  00.1600.28.antesnp100.csv  00.1600.29.antesnp100.csv  00.1600.3.antesnp100.csv  00.1600.30.antesnp100.csv  00.1600.31.antesnp100.csv  00.1600.32.antesnp100.csv  00.1600.33.antesnp100.csv  00.1600.34.antesnp100.csv  00.1600.35.antesnp100.csv  00.1600.36.antesnp100.csv  00.1600.37.antesnp100.csv  00.1600.38.antesnp100.csv  00.1600.39.antesnp100.csv  00.1600.4.antesnp100.csv  00.1600.40.antesnp100.csv  00.1600.41.antesnp100.csv  00.1600.42.antesnp100.csv  00.1600.43.antesnp100.csv  00.1600.44.antesnp100.csv  00.1600.45.antesnp100.csv  (+3954 more)
data/dbSNP/: README.txt
src/model/: bayesian_model.hpp  bayesian_model.ipp  epistasis_model.hpp  epistasis_model.ipp  instance.hpp  instance.ipp  penetrance_model.hpp  penetrance_model.ipp  regression_model.hpp  regression_model.ipp  variance_model.hpp  variance_model.ipp
src/util/: csv_parser.hpp  csv_parser.ipp  misc.hpp  misc.ipp  progress_bar.hpp  progress_bar.ipp  snp_analyzer.hpp  snp_analyzer.ipp  types.hpp
test/model/: CMakeLists.txt
test/model/src/: compare_models.cpp  slurm_BOOST.sh  slurm_EpiGEN.sh  slurm_MACOED.sh  util.hpp
test/unit/: CMakeLists.txt
test/unit/src/: bayesian_model.cpp  instance.cpp  penetrance_model.cpp  regression_model.cpp  variance_model.cpp
(+7729 files in other folders)
